部分文章添加评论功能

--- a/src/content/weeks/2025-Week17.md
+++ b/src/content/weeks/2025-Week17.md
@@ -59,3 +59,20 @@ tags: [周记]
 &emsp;&emsp;虽然前期已经整理了很多，但最后要把所有东西都打包，我们还是低估了工作量。躺了一天，晚上还看了灵魂摆渡3，按照传统吃了南京大排档，终于在九点多的时候开始整理行李。不出所料，凌晨两点多还没收拾完，累得筋疲力尽。第二天早起再整理，慌慌张张赶早上的火车。
 
 &emsp;&emsp;女朋友让我最后再看一眼房子，当时听到这话的时候，确实有些感慨。回去看了一遍住了大半年的房子，心里知道，之后再也不会回来了。之后的时间，由于太累了，根本没精力酝酿不舍之情。
+
+<script src="https://giscus.app/client.js"
+        data-repo="roc80/Blog"
+        data-repo-id="R_kgDOO4NnfQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOO4Nnfc4Ctshe"
+        data-mapping="pathname"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
