--- a/src/content/weeks/2025-Week21.md
+++ b/src/content/weeks/2025-Week21.md
@@ -15,3 +15,20 @@ tags: [周记]
 &emsp;&emsp;写伙伴匹配系统的时候，一直在尽量优化代码。写接口的时候考虑到很多场景，判断条件挺多的，同时也很费时间。有时候写出来感觉不够优雅，交给AI去优化，自己顺便从中学到新的思路和写法。
 
 &emsp;&emsp;说到AI，目前用惯了ChatGPT、Claude、Perplexity，之前使用过部分国内的产品，感觉还有差距，现在已经习惯了用国外的AI平台了。
+
+<script src="https://giscus.app/client.js"
+        data-repo="roc80/Blog"
+        data-repo-id="R_kgDOO4NnfQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOO4Nnfc4Ctshe"
+        data-mapping="pathname"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
