--- a/src/content/weeks/2025-Week16.md
+++ b/src/content/weeks/2025-Week16.md
@@ -44,3 +44,20 @@ https://leetcode.cn/problems/coin-change/
 &emsp;&emsp;从浙江图书馆，沿着天目山路去浙工大（屏峰），快乐骑车。被辅警逮住载人了，不快乐。
 
 &emsp;&emsp;最后再看了一次浙工大，吃了好吃的水浒烤肉，沿着西溪路回了图书馆。经过玉泉校区的时候又被逮住了，不快乐。好在这两次都没罚款，形式主义地学习了下。西溪路沿路地风景挺漂亮的。
+
+<script src="https://giscus.app/client.js"
+        data-repo="roc80/Blog"
+        data-repo-id="R_kgDOO4NnfQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOO4Nnfc4Ctshe"
+        data-mapping="pathname"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
