--- a/src/content/weeks/2025-Week19.md
+++ b/src/content/weeks/2025-Week19.md
@@ -18,3 +18,20 @@ tags: [周记]
 1. 序列DP https://leetcode.cn/problems/word-break/description/
 
 2. https://leetcode.cn/problems/IlPe0q/description/
+
+<script src="https://giscus.app/client.js"
+        data-repo="roc80/Blog"
+        data-repo-id="R_kgDOO4NnfQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOO4Nnfc4Ctshe"
+        data-mapping="pathname"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
