--- a/src/content/weeks/2025-Week22.md
+++ b/src/content/weeks/2025-Week22.md
@@ -22,3 +22,20 @@ tags: [周记]
 5月30号下了好大的雨，算是最近几个月印象中最大的雨了。
 
 > 总结一下：感觉这周是无聊的。
+
+<script src="https://giscus.app/client.js"
+        data-repo="roc80/Blog"
+        data-repo-id="R_kgDOO4NnfQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOO4Nnfc4Ctshe"
+        data-mapping="pathname"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
