--- a/src/content/weeks/2025-Week24.md
+++ b/src/content/weeks/2025-Week24.md
@@ -16,3 +16,20 @@ tags: [周记]
 &emsp;&emsp;没拍什么好看的风景，西北多风沙。放一张吃的吧，兰州德元纯汤牛肉面，好吃。
 
 ![wx_camera_1750153525529](https://raw.githubusercontent.com/roc80/DrawingBoard/main/image/wx_camera_1750153525529.jpg)
+
+<script src="https://giscus.app/client.js"
+        data-repo="roc80/Blog"
+        data-repo-id="R_kgDOO4NnfQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOO4Nnfc4Ctshe"
+        data-mapping="pathname"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
