--- a/src/content/weeks/2025-Week27.md
+++ b/src/content/weeks/2025-Week27.md
@@ -32,3 +32,21 @@ tags: [周记]
 &emsp;&emsp;最近在看[Core Dump](https://www.youtube.com/@CoreDumpped/videos)的视频，能学到一些东西。
 
 &emsp;&emsp;下周继续跟进面试状态 & 刷算法题。
+
+
+<script src="https://giscus.app/client.js"
+        data-repo="roc80/Blog"
+        data-repo-id="R_kgDOO4NnfQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOO4Nnfc4Ctshe"
+        data-mapping="pathname"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
